--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=JobListing-MongoDB
+
+spring.data.mongodb.uri=mongodb+srv://root:<Maxikolbe@24>@maxiflexy.q4gxxdi.mongodb.net/?retryWrites=true&w=majority&appName=Maxiflexy
+spring.data.mongodb.database=maxiflexy
