--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=JobListing-MongoDB
 
-spring.data.mongodb.uri=mongodb+srv://root:Maxikolbe%4024@maxiflexy.q4gxxdi.mongodb.net/?retryWrites=true&w=majority&appName=Maxiflexy
+spring.data.mongodb.uri=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@maxiflexy.q4gxxdi.mongodb.net/?retryWrites=true&w=majority&appName=Maxiflexy
 spring.data.mongodb.database=maxiflexy
